2004-01-18  bulia byak <bulia@users.sourceforge.net>

	* src/sp-spiral.cpp,h: Moved defines to .h

	* src/object-edit.cpp: Reenabled restricted ctrl-rotation of spiral and arc. Added
	alt-drag in spiral to lock radius. Used PI/options.rotationsnapsperpi everywhere
	instead of PI/4.
 
	* src/selection-chemistry.cpp,h src/select-context.cpp: Enable [ ] keys to rotate
	selected objects by rotationsnapsperpi. Alt [ ] rotate by angular pixels.
 
	* src/event-context.cpp src/preferences-skeleton.h src/desktop.h src/zoom-context.cpp
	src/select-context.cpp: Behavior fixes, simplifications, & unifications in handling
	dragtolerance, rubberband, and shift/ctrl+selection

	* src/event-context.cpp src/preferences-skeleton.h src/desktop.h: Define & use new
	options for scrolling distances: keyscroll, wheelscroll

2004-01-18 MenTaLguY <mental@rydia.net>

	* src/uri.h, src/uri.cpp, src/uri-reference.h, src/uri-reference.cpp,
	  src/sp-item.h, src/sp-item.cpp, src/sp-clippath.h,
	  src/sp-gradient.h, src/sp-gradient.cpp, src/sp-mask.h,
	  src/sp-item.h, src/sp-item.cpp:

	  Reworked URIs to use libxml, and URIReferences to be specialized
	  for particular object types.  Also switched gradients to using
	  URIReferences.

2004-01-17 Jon <jon@protofunk.org>

        * src/desktop.cpp: Changed the document shadow to 1 pixel. It as
          set to 5, which is really cheesy. I changed it in the 
          constructor for SP_desktop_new in the function 
          sp_ctrlrect_set_shadow().

2004-01-17 Bryce <bryce@bryceharrington.com>

	* src/sp-root.cpp, src/sp-symbol.cpp:  Fixing NRMatrix's a -> &a
	  so codebase will build.

	* Adding marker xpm's to Makefile.in so the button images display
  	  in the stroke style dialog (must do a make install)

2004-01-17 MenTaLguY <mental@rydia.net>

	* src/uri.h, src/uri.cpp, src/uri-references.cpp:
	  new Inkscape::URI implementation using libxml URI stuff

2004-01-15  bulia byak <bulia@users.sourceforge.net>
